samples/_failures_safe/1761225544_43e3f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b4c605f.c: In function ‘main’:
./samples/SAFE/__tmp_1b4c605f.c:164:12: error: missing terminating " character
  164 |     printf("\nSecond matrix:\
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1b4c605f.c:164:5: error: expected expression at end of input
  164 |     printf("\nSecond matrix:\
      |     ^~~~~~
./samples/SAFE/__tmp_1b4c605f.c:164:5: error: expected declaration or statement at end of input
